<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.valdemar.view.main.ui.inicio.InicioFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.valdemar.view.main.ui.send.SendFragment"
        android:label="@string/menu_post"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.valdemar.view.main.ui.creaciones.CreacionesFragment"
        android:label="@string/menu_creation"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.valdemar.view.main.ui.favoritos.FavoritosFragment"
        android:label="@string/menu_favoritos"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.valdemar.view.main.ui.memes.MemesFragment"
        android:label="@string/meme"
        tools:layout="@layout/fragment_memes" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.valdemar.view.main.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.valdemar.view.main.ui.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.valdemar.view.main.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

</navigation>