<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_spooky"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_send"
            android:title="@string/menu_send" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_folder"
            android:title="Mis Creaciones" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_stars"
            android:title="Mis Favoritos" />

        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_meme"
            android:title="Memes de terror" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="Chats" />
    </group>

    <item android:title="Extra">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="Compartir Spook" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_out"
                android:title="@string/cerrar_sesi_n" />

        </menu>
    </item>

</menu>
